# chess-bot

./: .gitignore  CMakeLists.txt  README.md  board.cpp  hash.cpp  magicBoard.cpp  magic_constants.h  main.cpp  move.h  nnue.h  search.cpp  staticEvals.cpp  staticEvals.h  transposition.cpp  uci.cpp
test/: test_board.cpp
